--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ table tr:nth-child(2n + 1) {
   background-color: #f31e37;
   color: white;
   border: none;
-  padding: .0.3rem;
+  padding: 0.3rem;
   border-radius: 5px;
   font-weight: 600;
 }
