--- a/style.css
+++ b/style.css
@@ -1,3 +1,38 @@
+
+
+/* body {
+  background-color: black;
+} */
+
+.header {
+  position: fixed;
+  background-color: rgb(59, 4, 110);
+  color: white;
+  font-weight: 400;
+  display: flex;
+  justify-content: space-around;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+ul {
+  display: flex;
+  gap: 1rem;
+  list-style: none;
+}
+
+button {
+  background: none;
+  color: white;
+  font-size: 1.2rem;
+  border: none;
+}
+
+li:not(:first-child){
+  border-left: 2px solid white;
+}
+
 h1,
 h2 {
   text-align: center;
