--- a/index.css
+++ b/index.css
@@ -1,5 +1,3 @@
-
-
 body {
   background-color: rgb(66 72 100);
   color: white;
@@ -9,7 +7,7 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-} 
+}
 
 .header {
   position: fixed;
@@ -47,7 +45,6 @@ body {
 
 #contact-section {
   padding: 4rem;
-  margin-left: 1rem;
   width: 60%;
   margin: 0 auto;
 }
@@ -69,7 +66,7 @@ button {
   border: none;
 }
 
-.nav-lists-ul li:not(:first-child){
+.nav-lists-ul li:not(:first-child) {
   border-left: 2px solid white;
 }
 
@@ -92,7 +89,7 @@ table tr:nth-child(2n + 1) {
   background-color: #f31e37;
   color: white;
   border: none;
-  padding: .0.3rem;
+  padding: 0.3rem;
   border-radius: 5px;
   font-weight: 600;
 }
